--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Created by https://www.gitignore.io/api/node
 
+package-lock.json
+
 ### Node ###
 # Logs
 logs
@@ -39,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+dist
 
 # TypeScript v1 declaration files
 typings/
