--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "main": "index.js",
   "scripts": {
     "watch": "npm run build && npm-run-all -p watch:*",
-    "watch:images": "onchange 'src/images/**/*' -- npm run copy:images",
-    "watch:scripts": "onchange 'src/scripts/**/*' -- npm run copy:scripts",
-    "watch:webfonts": "onchange 'src/webfonts/**/*' -- npm run copy:webfonts",
+    "watch:images": "onchange \"src/images/**/*\" -- npm run copy:images",
+    "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run copy:scripts",
+    "watch:webfonts": "onchange \"src/webfonts/**/*\" -- npm run copy:webfonts",
     "watch:sass": "node-sass src/sass/style.scss --source-map true -w -o dist/css",
     "watch:browsersync": "browser-sync start --server --files ./ --cwd dist",
     "clean": "rimraf dist",
-    "copy:html": "rimraf dist/**/*.html && cpy '**/*.html' '../dist' --cwd=src --parents",
-    "copy:scripts": "rimraf dist/scripts && cpy '**/*' '../../dist/scripts' --cwd=src/scripts --parents",
-    "copy:webfonts": "rimraf dist/webfonts && cpy '**/*' '../../dist/webfonts' --cwd=src/webfonts --parents",
-    "copy:images": "rimraf dist/images && cpy '**/*' '../../dist/images' --cwd=src/images --parents",
-    "build": "npm-run-all clean copy:* build:*",
+    "copy:html": "rimraf dist/**/*.html && cpy \"**/*.html\" \"../dist\" --cwd=src --parents",
+    "copy:scripts": "rimraf dist/scripts && cpy \"**/*\" \"../../dist/scripts\" --cwd=src/scripts --parents",
+    "copy:webfonts": "rimraf dist/webfonts && cpy \"**/*\" \"../../dist/webfonts\" --cwd=src/webfonts --parents",
+    "copy:images": "rimraf dist/images && cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
+    "build": "npm-run-all copy:* build:*",
     "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css"
   },
   "author": "",
@@ -24,6 +24,7 @@
     "browser-sync": "^2.24.7",
     "browsersync": "0.0.1-security",
     "cpy-cli": "^2.0.0",
+    "globstar": "^1.0.0",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
