add new section sale

--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "main": "index.js",
   "scripts": {
     "watch": "npm run build && npm-run-all -p watch:*",
-    "watch:html": "onchange \"src/**/*.html\" -- npm run copy:html",
-    "watch:images": "onchange \"src/images/**/*\" -- npm run copy:images",
-    "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run copy:scripts",
-    "watch:webfonts": "onchange \"src/webfonts/**/*\" -- npm run copy:webfonts",
+    "watch:images": "onchange 'src/images/**/*' -- npm run copy:images",
+    "watch:scripts": "onchange 'src/scripts/**/*' -- npm run copy:scripts",
+    "watch:webfonts": "onchange 'src/webfonts/**/*' -- npm run copy:webfonts",
     "watch:sass": "node-sass src/sass/style.scss --source-map true -w -o dist/css",
     "watch:browsersync": "browser-sync start --server --files ./ --cwd dist",
     "clean": "rimraf dist",
-    "copy:html": "rimraf dist/**/*.html && cpy \"**/*.html\" \"../dist\" --cwd=src --parents",
-    "copy:scripts": "rimraf dist/scripts && cpy \"**/*\" \"../../dist/scripts\" --cwd=src/scripts --parents",
-    "copy:webfonts": "rimraf dist/webfonts && cpy \"**/*\" \"../../dist/webfonts\" --cwd=src/webfonts --parents",
-    "copy:images": "rimraf dist/images && cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
+    "copy:html": "rimraf dist/**/*.html && cpy '**/*.html' '../dist' --cwd=src --parents",
+    "copy:scripts": "rimraf dist/scripts && cpy '**/*' '../../dist/scripts' --cwd=src/scripts --parents",
+    "copy:webfonts": "rimraf dist/webfonts && cpy '**/*' '../../dist/webfonts' --cwd=src/webfonts --parents",
+    "copy:images": "rimraf dist/images && cpy '**/*' '../../dist/images' --cwd=src/images --parents",
     "build": "npm-run-all clean copy:* build:*",
     "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css"
   },
