--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "event-stream": "3.3.4"
   }
 }
