--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.24.7",
-    "browsersync": "0.0.1-security",
     "cpy-cli": "^2.0.0",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "rimraf": "^2.6.2"
-  }
+  },
+  "dependencies": {}
 }
