--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "copy:images": "cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
     "prebuild": "npm run clean",
     "build": "npm-run-all -p copy build:*",
-    "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css"
+    "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css",
+    "lint": "prettier"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,8 @@
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^5.2.0",
+    "prettier": "^1.15.3",
+    "pretty-quick": "^1.8.0",
     "rimraf": "^2.6.3"
   },
   "dependencies": {}
