--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prebuild": "npm run clean",
     "build": "npm-run-all -p copy build:*",
     "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css",
+    "lint": "eslint src/",
     "format": "prettier --write \"src/**/*.{js,html,scss}\""
   },
   "author": "",
@@ -28,6 +29,12 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "cpy-cli": "^2.0.0",
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^5.2.0",
