--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run copy:scripts",
     "watch:webfonts": "onchange \"src/webfonts/**/*\" -- npm run copy:webfonts",
     "watch:sass": "node-sass src/sass/style.scss --source-map true -w -o dist/css",
-    "watch:browsersync": "browser-sync start --server --files ./ --cwd dist",
+    "watch:browsersync": "browser-sync dist -w",
     "clean": "rimraf dist",
     "copy": "npm-run-all -p copy:*",
     "copy:html": "cpy \"**/*.html\" \"../dist\" --cwd=src --parents",
