--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "cpy-cli": "^2.0.0",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -48,12 +46,11 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "onchange": "^5.2.0",
+    "parcel-bundler": "^1.11.0",
+    "posthtml-include": "^1.2.0",
     "prettier": "^1.15.3",
-    "pretty-quick": "^1.8.0",
-    "rimraf": "^2.6.3"
+    "pretty-quick": "^1.8.0"
   },
   "dependencies": {}
 }
