build(npm): scripts exchange

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,5 @@
-images/
+src/images/
 **/sass/bootstrap/
 **/sass/fontawesome/
-webfonts/
-**/scripts/bootstrap.min.*
+src/webfonts/
+src/scripts/bootstrap.min.*
