--- a/package.json
+++ b/package.json
@@ -4,23 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prewatch": "npm run build",
-    "watch": "npm-run-all -p watch:*",
-    "watch:html": "onchange \"src/**/*.html\" -- npm run copy:html",
-    "watch:images": "onchange \"src/images/**/*\" -- npm run copy:images",
-    "watch:scripts": "onchange \"src/scripts/**/*\" -- npm run copy:scripts",
-    "watch:webfonts": "onchange \"src/webfonts/**/*\" -- npm run copy:webfonts",
-    "watch:sass": "node-sass src/sass/style.scss --source-map true -w -o dist/css",
-    "watch:browsersync": "browser-sync dist -w",
-    "clean": "rimraf dist",
-    "copy": "npm-run-all -p copy:*",
-    "copy:html": "cpy \"**/*.html\" \"../dist\" --cwd=src --parents",
-    "copy:scripts": "cpy \"**/*\" \"../../dist/scripts\" --cwd=src/scripts --parents",
-    "copy:webfonts": "cpy \"**/*\" \"../../dist/webfonts\" --cwd=src/webfonts --parents",
-    "copy:images": "cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
+    "watch": "parcel src/index.html --open --no-autoinstall --port 8080",
     "prebuild": "npm run clean",
-    "build": "npm-run-all -p copy build:*",
-    "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css",
+    "build": "parcel build src/index.html",
+    "clean": "rimraf dist",
     "code-quality": "npm-run-all format lint",
     "format": "prettier --write \"src/**/*.{js,html,scss}\"",
     "lint": "eslint src/"
@@ -50,7 +37,12 @@
     "parcel-bundler": "^1.11.0",
     "posthtml-include": "^1.2.0",
     "prettier": "^1.15.3",
-    "pretty-quick": "^1.8.0"
+    "pretty-quick": "^1.8.0",
+    "rimraf": "^2.6.3",
+    "sass": "^1.15.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
+  }
 }
