--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html",
     "clean": "rimraf dist",
-    "code-quality": "npm-run-all format lint",
+    "code-quality": "npm run format && npm run lint",
     "format": "prettier --write \"src/**/*.{js,html,scss}\"",
     "lint": "eslint src/"
   },
@@ -19,7 +19,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint"
+      "eslint --fix",
+      "git add"
     ]
   },
   "author": "",
@@ -33,7 +34,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.11.0",
     "posthtml-include": "^1.2.0",
     "prettier": "^1.15.3",
