--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prewatch": "npm run clean",
     "watch": "parcel src/index.html --open --no-autoinstall --port 8080",
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html",
@@ -35,7 +36,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "parcel-bundler": "^1.11.0",
-    "posthtml-include": "^1.2.0",
+    "posthtml-modules": "^0.4.2",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
     "rimraf": "^2.6.3",
