--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ typings/
 .serverless
 node_modules/*
 src/sass/.sass-cache/*
-
+src/sass/style.css
+src/sass/style.css.map
 
 # End of https://www.gitignore.io/api/node
