Add flickity to product section

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "parcel src/index.html --open --no-autoinstall --port 8080",
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist .cache",
     "code-quality": "npm run format && npm run lint",
     "format": "prettier --write \"src/**/*.{js,html,scss}\"",
     "lint": "eslint src/"
@@ -43,6 +43,7 @@
     "sass": "^1.15.3"
   },
   "dependencies": {
+    "flickity": "^2.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6"
   }
