--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ typings/
 
 # Serverless directories
 .serverless
-
+src/sass/bootstrap/.sass-cache/*
+node_modules
+src/sass/.sass-cache/*
 
 # End of https://www.gitignore.io/api/node
