--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "watch": "parcel src/index.html --open --no-autoinstall --port 8080",
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist .cache",
     "code-quality": "npm run format && npm run lint",
     "format": "prettier --write \"src/**/*.{js,html,scss}\"",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "lint:single": "eslint --ignore-pattern '!mustasche.js' "
   },
   "husky": {
     "hooks": {
@@ -35,7 +36,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "parcel-bundler": "^1.11.0",
+    "parcel-bundler": "^1.12.3",
     "posthtml-modules": "^0.4.2",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
@@ -43,7 +44,11 @@
     "sass": "^1.15.3"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
+    "flickity": "^2.2.0",
+    "imagesloaded": "^4.1.4",
+    "jquery": "^3.4.1",
+    "mustache": "^3.0.1",
+    "mustache.js": "^1.0.0",
     "popper.js": "^1.14.6"
   }
 }
