--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ typings/
 
 # Serverless directories
 .serverless
-
+ src/.sass-cache/
+ src/sass/.sass-cache/
+ src/style.css
 
 # End of https://www.gitignore.io/api/node
