--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "sass": "^1.15.3"
   },
   "dependencies": {
+    "core-js": "^2.6.8",
+    "electron-to-chromium": "^1.3.136",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "psl": "^1.1.31"
   }
 }
