--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "flickity": "^2.2.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "parcel-bundler": "^1.12.3",
