--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "parcel src/index.html --open --no-autoinstall --port 8080",
     "prebuild": "npm run clean",
     "build": "parcel build src/index.html",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist .cache",
     "code-quality": "npm run format && npm run lint",
     "format": "prettier --write \"src/**/*.{js,html,scss}\"",
     "lint": "eslint src/"
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "flickity": "^2.2.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "parcel-bundler": "^1.12.3",
